# MegaBasterd-CLI

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_RELEASE_NOTES.md  LICENSE  MANIFEST.in  README.md  Run.ps1  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  lint.yml  release.yml  tests.yml
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIG.md  USAGE.md
launcher/: SecureLog.cs
src/megabasterd_cli/: __init__.py  __main__.py  cli.py  config.py  launcher_menu.py  upload_support.py
src/megabasterd_cli/accounts/: __init__.py  manager.py  storage.py
src/megabasterd_cli/commands/: __init__.py  account_cmd.py  api_support.py  cloud_cmd.py  config_cmd.py  crypter_cmd.py  download_cmd.py  download_support.py  file_ops_cmd.py  info_cmd.py  proxy_cmd.py  queue_cmd.py  share_cmd.py  stream_cmd.py  upload_cmd.py  watch_cmd.py
src/megabasterd_cli/core/: __init__.py  _link_http.py  api.py  auth.py  chunks.py  client.py  cloud.py  crypter.py  crypto.py  download_source.py  download_transport.py  download_verify.py  downloader.py  errors.py  folder_downloader.py  hashcash.py  link_services.py  links.py  nodes.py  progress_ticker.py  range_validation.py  responses.py  session_store.py  shares.py  splitter.py  state.py  thumbnail.py  upload_identity.py  upload_transport.py  upload_tree.py  uploader.py
src/megabasterd_cli/native/: __init__.py
src/megabasterd_cli/native/windows/: __init__.py  hashcash_solver.c
src/megabasterd_cli/proxy/: __init__.py  connect_proxy.py  runtime.py  selector.py  smart_proxy.py
src/megabasterd_cli/queue/: __init__.py  errors.py  manager.py  models.py  schema.py  secretbox.py  storage.py
src/megabasterd_cli/streaming/: __init__.py  server.py
src/megabasterd_cli/ui/: machine_output.py  progress.py  prompts.py  tables.py  theme.py  transfer_progress.py
src/megabasterd_cli/utils/: corruption.py  filelock.py  helpers.py  hooks.py  logger.py  redaction.py  secure_log.py  selection.py  speed.py
tests/: launcher_helpers.py  queue_helpers.py  test_account_resolution.py  test_account_storage.py  test_account_storage_replace_retry.py  test_account_store_corruption.py  test_api.py  test_api_compatibility_1x.py  test_api_hashcash_budget.py  test_api_response_validation.py  test_api_retry_policy.py  test_api_streaming_cap.py  test_atomic_write_temp_cleanup.py  test_auto_account_parallel.py  test_auto_account_replan.py  test_base64_strict.py  test_chunks.py  test_cli_argv_redaction.py  test_cli_imports.py  test_cli_table_markup_safety.py  test_client_isolation.py  test_client_response_validation.py  test_client_session.py  test_config.py  test_config_corruption.py  test_config_fail_closed.py  test_config_safety.py  test_config_validation.py  test_connect_proxy_policy.py  test_connect_proxy_shutdown.py  test_containers.py  test_corruption_backups.py  test_crypter.py  test_crypter_atomic_output.py  test_crypter_integrity.py  test_crypter_limits.py  test_crypto.py  test_ctr_skip_alignment.py  test_destination_reservation.py  test_dlc_hardening.py  (+108 more)
tests/data/: public_api_1x.json
tools/: build_hashcash_windows.ps1  hashcash_solver_windows.ps1
