[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megabasterd-cli"
version = "1.2.0"
description = "A script-first MEGA.nz downloader/uploader inspired by MegaBasterd"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Kiaro Sama" }
]
keywords = ["mega", "mega.nz", "downloader", "uploader", "cli", "megabasterd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications :: File Sharing",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.5.0",
    "requests>=2.31.0",
    "pycryptodome>=3.19.0",
    "tenacity>=8.2.0",
    "cryptography>=41.0.0",
    "colorama>=0.4.6; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    # Required by tests/test_sdist_packaging.py. Without it that test used to
    # skip, so `pip install -e ".[dev]" && pytest` went green having never
    # built an sdist - the one thing it exists to check.
    "build>=1.0.0",
    "black>=23.9.0,<26",
    # Kept unpinned here; the type gate pins them exactly in the Lint
    # workflow, which is the one place it runs.
    "types-requests>=2.31",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/KiaroSama/megabasterd-cli"
Repository = "https://github.com/KiaroSama/megabasterd-cli"
"Bug Tracker" = "https://github.com/KiaroSama/megabasterd-cli/issues"
Documentation = "https://github.com/KiaroSama/megabasterd-cli#readme"
"Original Project" = "https://github.com/tonikelope/megabasterd"

[project.scripts]
megabasterd-cli = "megabasterd_cli.cli:main"
mbcli = "megabasterd_cli.cli:main"
mb = "megabasterd_cli.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["megabasterd_cli*"]

[tool.setuptools.package-data]
megabasterd_cli = ["py.typed", "native/windows/*.c"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
# -n auto fans the suite across every core; the suite is ~4x faster for it
# (202s -> ~50s on 16 cores). Each xdist worker is its own PROCESS, so
# module-level state cannot leak between tests that land on different
# workers - which is also why nothing had to be rewritten to enable this.
# Override with `-n0` when stepping through a single test in a debugger.
addopts = "-v --tb=short --strict-markers -n auto --dist loadgroup"
pythonpath = ["src"]
